@@ -1,20 +1,5 @@
 CLEANFILES = *~ .deps/* .*.swp .*.swo
 
 EXTRA_DIST =		\
-	codeset.m4	\
-	gdk-pixbuf.m4	\
-	gettext.m4	\
-	glibc21.m4	\
-	gnome.m4	\
-	gtk.m4		\
-	iconv.m4	\
-	imlib.m4	\
-	intltool.m4     \
-	isc-posix.m4	\
-	lcmessage.m4	\
-	libcharset.m4	\
-	libtool.m4	\
 	libwmf.m4	\
-	pkg.m4		\
-	progtest.m4	\
 	xine.m4	
